--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -1,5 +1,5 @@
 <div class="vis back">
     <div class="ui top right attached label visPaneControls">
-        <i class="signal icon backToVis"></i>
+        <i class="signal icon"></i>
     </div>
 </div>
