--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Utraffic Visualiser</title>
-    <link rel="stylesheet" class="ui" type="text/css" href="{{ url_for('static', filename='bower_components/semantic-ui/dist/semantic.min.css') }}" media="screen">
-    <link href="{{ url_for('static', filename='css/index.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bower_components/semantic-ui/dist/semantic.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css')}}">
 </head>
 <body>
 <div id="index-page">
