--- a/app/components/sim-controls/sim-controls.html
+++ b/app/components/sim-controls/sim-controls.html
@@ -1,8 +1,1 @@
-<div id="controls" class="ui row">
-    <div id="playPause" class="ui mini labeled icon button">
-        <i class="teal play icon"></i>Start
-    </div>
-    <div id="stop" class="ui mini labeled icon button">
-        <i class="red stop icon"></i>Stop
-    </div>
-</div>
+<i class="big link play icon"></i>
