Leaner ui html specification. First vm specs

--- a/app/components/main/main.html
+++ b/app/components/main/main.html
@@ -13,6 +13,6 @@
         <!--<sim-object-list></sim-object-list>-->
         <!--</div>-->
         <!--</div>-->
-        <visualisation-pane class="column" style="height: 500px;"></visualisation-pane>
+        <visualisation-pane class="column"></visualisation-pane>
     </div>
 </div>
