--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -1,5 +1,10 @@
-<div class="vis back">
-    <div class="ui top right attached label visPaneControls">
-        <i class="signal icon"></i>
+<div class="ui top right attached label">
+    <i class="large link close icon clear-vis"></i>
+</div>
+<div class="ui bottom attached label">
+    <div class="ui right aligned grid">
+        <div class="column">
+            <div class="ui tiny secondary button">Done</div>
+        </div>
     </div>
 </div>
