--- a/app/components/visualisation/visualisation-pane.html
+++ b/app/components/visualisation/visualisation-pane.html
@@ -1,2 +1,2 @@
-<visualisation-front></visualisation-front>
-<!--<visualistion-back></visualistion-back>-->
+<visualisation-front v-if="side === 'front'"></visualisation-front>
+<visualisation-back v-if="side === 'back'"></visualisation-back>
