Moves the sim object list component to the vis back pane

--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -8,3 +8,8 @@
         </div>
     </div>
 </div>
+<div class="ui centered grid">
+    <div class="ten wide column">
+        <sim-object-list></sim-object-list>
+    </div>
+</div>
