--- a/app/components/sim-object/sim-object.html
+++ b/app/components/sim-object/sim-object.html
@@ -1,10 +1,13 @@
-<div class="ui grid item simObject">
-    <div class="two wide column">
-        <i class="ui flipped truck icon"></i>
+<div class="content aligned">
+    <div class="ui grid">
+        <div class="two wide column">
+            <a class="ui huge circular label">{{id}}</a>
+        </div>
+        <div class="fourteen wide right aligned column">
+            <div class="mini ui button objectProperty">vel</div>
+            <div class="mini ui button objectProperty">acc</div>
+            <div class="mini ui button objectProperty">pos</div>
+            <div class="mini ui button objectProperty">lane</div>
+        </div>
     </div>
-    <div class="two wide column">id</div>
-    <div class="tiny ui button objectProperty">vel</div>
-    <div class="tiny ui button objectProperty">acc</div>
-    <div class="tiny ui button objectProperty">pos</div>
-    <div class="tiny ui button objectProperty">lane</div>
 </div>
