--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="ui centered grid">
-    <div class="ten wide column">
+    <div class="four wide column">
         <sim-object-list></sim-object-list>
     </div>
 </div>
