dispatches event when sim object property is clicked

--- a/app/components/sim-object-list/sim-object-list.html
+++ b/app/components/sim-object-list/sim-object-list.html
@@ -1,6 +1,6 @@
 <div class="ui divided list">
     <h3 class="header">Sim Objects</h3>
-    <div class="item" v-repeat="simObjects">
+    <div class="item" v-repeat="simObject: simObjects">
         <sim-object></sim-object>
     </div>
 </div>
