--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -1,10 +1,10 @@
 <div class="ui top right attached label">
-    <i class="large link close icon clear-vis"></i>
+    <i class="link close icon clear-vis"></i>
 </div>
 <div class="ui bottom attached label">
     <div class="ui right aligned grid">
         <div class="column">
-            <div class="ui tiny secondary button">Done</div>
+            <div class="ui compact tiny secondary button">Done</div>
         </div>
     </div>
 </div>
