Back visualisation face notifies front face when object property is tracked

--- a/app/components/visualisation/visualisation-pane.html
+++ b/app/components/visualisation/visualisation-pane.html
@@ -1,2 +1,2 @@
-<visualisation-front v-if="side === 'front'"></visualisation-front>
-<visualisation-back v-if="side === 'back'"></visualisation-back>
+<visualisation-front v-show="side === 'front'"></visualisation-front>
+<visualisation-back v-show="side === 'back'"></visualisation-back>
