Upgrades vue version to 0.11.4 and migrates codebase

--- a/app/components/sim-object-list/sim-object-list.html
+++ b/app/components/sim-object-list/sim-object-list.html
@@ -1,6 +1,6 @@
 <div class="ui divided list">
     <h3 class="header">Sim Objects</h3>
     <div class="item" v-repeat="simObject: simObjects">
-        <sim-object></sim-object>
+        <sim-object v-with="simObject: simObject"></sim-object>
     </div>
 </div>
