--- a/app/components/object-property/object-property.html
+++ b/app/components/object-property/object-property.html
@@ -1,5 +1,5 @@
 <div class="mini ui button"
      v-on="click: isTracked = !isTracked"
      v-class="teal: isTracked">
-    {{property.name}}
+    {{name}}
 </div>
