Switching vis pane face is now a toggle action

--- a/app/components/visualisation/back.html
+++ b/app/components/visualisation/back.html
@@ -9,7 +9,7 @@
 <div class="ui bottom attached label">
     <div class="ui right aligned grid">
         <div class="column">
-            <div class="ui compact tiny secondary button" v-on="click: done()">Done</div>
+            <div class="ui compact tiny secondary button" v-on="click: $dispatch('switch-vis-face')">Done</div>
         </div>
     </div>
 </div>
