--- a/app/components/visualisation/front.html
+++ b/app/components/visualisation/front.html
@@ -1,5 +1,5 @@
 <div class="ui top right attached label">
-    <i class="large link setting icon"></i>
-    <i class="large link close icon clear-vis"></i>
+    <i class="link setting icon" v-on="click: $dispatch('switch-vis-face')"></i>
+    <i class="link close icon clear-vis" v-on="click: print()"></i>
 </div>
 <high-chart></high-chart>
