--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,5 +10,7 @@
     <main-component></main-component>
 </div>
 </body>
+<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='bower_components/highcharts/highcharts.src.js') }}"></script>
 <script src="{{ url_for('static', filename='build/app.js') }}"></script>
 </html>
