--- a/app/components/visualisation/front.html
+++ b/app/components/visualisation/front.html
@@ -2,4 +2,4 @@
     <i class="link setting icon" v-on="click: $dispatch('switch-vis-face')"></i>
     <i class="link close icon clear-vis" v-on="click: print()"></i>
 </div>
-<high-chart></high-chart>
+<high-chart class="chart"></high-chart>
